--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
 		"onLanguage:java"
 	],
 	"main": "./out/extension.js",
-	"capabilities" : {
-        "documentSymbolProvider" : "true"
-    },
+	"capabilities": {
+		"documentSymbolProvider": "true"
+	},
 	"contributes": {
 		"commands": [
 			{
@@ -28,7 +28,7 @@
 			"activitybar": [
 				{
 					"id": "spl-viewContainer",
-					"title": "Maloma SPL",
+					"title": "SY SPL",
 					"icon": "media/dep.svg"
 				}
 			]
@@ -45,10 +45,37 @@
 		},
 		"viewsWelcome": [
 			{
-			  "view": "blockIdentification",
-			  "contents": "Launch block identification.\n[Adapt Code](command:spl-extension.adaptCode)"
+				"view": "blockIdentification",
+				"contents": "Launch block identification.\n[Adapt Code](command:spl-extension.adaptCode)"
 			}
-		  ]
+		],
+		"menus": {
+			"editor/title": [
+				{
+					"command": "spl-extension.adaptCode",
+					"alt": "spl-extension.adaptCode",
+					"group": "navigation"
+				}
+			]
+		},
+		"configuration": {
+			"title": "TypeScript",
+			"properties": {
+				"typescript.useCodeSnippetsOnMethodSuggest": {
+					"type": "boolean",
+					"default": false,
+					"description": "Complete functions with their parameter signature."
+				},
+				"typescript.tsdk": {
+					"type": [
+						"string",
+						"null"
+					],
+					"default": null,
+					"description": "Specifies the folder path containing the tsserver and lib*.d.ts files to use."
+				}
+			}
+		}
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
