--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
 		"viewsWelcome": [
 			{
 				"view": "blockIdentification",
-				"contents": "Launch block identification.\n[Adapt Code](command:spl-extension.adaptCode)"
+				"contents": "Launch block identification.\n[Identify features](command:spl-extension.adaptCode)"
 			}
 		],
 		"menus": {
@@ -100,6 +100,7 @@
 		"typescript": "^4.4.4"
 	},
 	"dependencies": {
+		"fs": "^0.0.1-security",
 		"natural": "^5.1.13",
 		"node-fpgrowth": "^1.2.1",
 		"tiny-tfidf": "^0.9.1"
