--- a/package.json
+++ b/package.json
@@ -68,71 +68,86 @@
 			]
 		},
 		"configuration": [
-				{
+			{
 				"title": "TypeScript",
 				"properties": {
-				"typescript.useCodeSnippetsOnMethodSuggest": {
-					"type": "boolean",
-					"default": false,
-					"description": "Complete functions with their parameter signature."
-				},
-				"typescript.tsdk": {
-					"type": [
-						"string",
-						"null"
-					],
-					"default": null,
-					"description": "Specifies the folder path containing the tsserver and lib*.d.ts files to use."
+					"typescript.useCodeSnippetsOnMethodSuggest": {
+						"type": "boolean",
+						"default": false,
+						"description": "Complete functions with their parameter signature."
+					},
+					"typescript.tsdk": {
+						"type": [
+							"string",
+							"null"
+						],
+						"default": null,
+						"description": "Specifies the folder path containing the tsserver and lib*.d.ts files to use."
+					}
 				}
+			},
+			{
+				"id": "blockIdentification",
+				"title": "Block Identification",
+				"order": 1,
+				"properties": {
+					"conf.settingsEditor.NameSetting": {
+						"type": "string",
+						"order": 1,
+						"description": "Feature Model Name.",
+						"default": "Feature Model"
+					},
+					"conf.settingsEditor.divideMethods": {
+						"type": "object",
+						"order": 2,
+						"description": "Divide methods and functions ?.",
+						"properties": {
+							"prop1": {
+								"type": "boolean",
+								"description": "True"
 							}
-		  		}
-				  ,
-				  {
-					  "id" : "blockIdentification",
-					  "title": "Block Identification",
-					  "order": 1,
-					  "properties": {
-						"conf.settingsEditor.NameSetting": {
-							"type": "string",
-							"order": 1,
-							"description": "Feature Model Name.",
-							"default": "Feature Model"
-						}
-					  }
-				  },
-				  {
-					"id" : "constraintsDiscovery",
-					"title": "Constraints discovery",
-					"order": 2,
-					"properties": {
-						"conf.settingsEditor.constraintsDiscoveryAlgorithmSetting": {
-							"type": "object",
-							"order": 2,
-							"description": "Select Algorithm.",
-							"properties": {
-								"prop1": {
-									"type": "boolean",
-									"description": "FCA"
-								},
-								"prop2": {
-									"type": "boolean",
-									"description": "fp Growth"
-								}
-							},
-							"additionalProperties": false,
-							"default": {
-								"prop1": true,
-								"prop2": true
-							}
+						},
+						"additionalProperties": false,
+						"default": {
+							"prop1": true
 						}
 					}
-				},
-				{
-					"id" : "visualisations",
-					"title": "Visualisations",
-					"order":4,
-					"properties": {}
-				},
+				}
+				
+			},
+			{
+				"id": "constraintsDiscovery",
+				"title": "Constraints discovery",
+				"order": 2,
+				"properties": {
+					"conf.settingsEditor.constraintsDiscoveryAlgorithmSetting": {
+						"type": "object",
+						"order": 2,
+						"description": "Select Algorithm.",
+						"properties": {
+							"prop1": {
+								"type": "boolean",
+								"description": "FCA"
+							},
+							"prop2": {
+								"type": "boolean",
+								"description": "fp Growth"
+							}
+						},
+						"additionalProperties": false,
+						"default": {
+							"prop1": true,
+							"prop2": true
+						}
+					}
+				}
+			},
+			{
+				"id": "visualisations",
+				"title": "Visualisations",
+				"order": 4,
+				"properties": {}
+			},
 			{
 				"id": "featureModelSynthesis",
 				"title": "Feature Model synthesis",
@@ -166,7 +181,7 @@
 					}
 				}
 			}
-			]
+		]
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
